--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -11,8 +11,7 @@
     --icon-color: #92C880;
     /* Fonts */
     --body-font: 'Open Sans', sans-serif;
-    --highlights-font: ;
-
-
+    --icon-font: 'Font Awesome 5 Free Solid';
+    
 
 }
