--- a/style.css
+++ b/style.css
@@ -1,2 +1,5 @@
 @import url("./assets/css/header.css");
 @import url("./assets/css/variables.css");
+@import url("./assets/css/hero.css");
+@import url("/assets/css/cards.css");
+@import url("./assets/css/footer.css");
